# OPF

./: LICENSE  README.md
Two_Bus/SerialCode/: CMakeCache.txt  CMakeLists.txt  Gen2.txt  Gen2.txt~  Gensolver.h~  Guide_Readme.odt  LMPresult.txt  Load2.txt~  Makefile  Makefile~  SerialCode  Summary_of_Result_Log.txt  Tran2.txt  Tran2.txt~  cmake_install.cmake  dualresult.txt  exec  generator.cpp  generator.cpp~  generator.h  generator.h~  gensolver.cpp  gensolver.cpp~  gensolver.h  gensolver.h~  gensolverOriginal.cpp  gensolverOriginal.cpp~  itresult.txt  load.cpp  load.h~  loadsolver.h~  maintwoserialOPF.cpp  maintwoserialOPF.cpp~  network.cpp  network.cpp~  network.h  network.h~  node.cpp  node.cpp~  node.h~  (+8 more)
Two_Bus/SerialCode/Result_Gen_upper_both/: Gen_upper_both_LMPresult.txt  Gen_upper_both_dualresult.txt  Gen_upper_both_objective.txt  Gen_upper_both_powerResult.txt  Gen_upper_both_primresult.txt  Gen_upper_both_resultsSimpleTwoSerial.ods
Two_Bus/SerialCode/Result_Gen_upper_limit/: Gen_upper_limit_LMPresult.txt  Gen_upper_limit_dualresult.txt  Gen_upper_limit_objective.txt  Gen_upper_limit_powerResult.txt  Gen_upper_limit_primresult.txt
Two_Bus/SerialCode/Result_Line_cong/: Line_cong_LMPresult.txt  Line_cong_dualresult.txt  Line_cong_objective.txt  Line_cong_powerResult.txt  Line_cong_primresult.txt  Line_cong_resultsSimpleTwoSerial.ods
Two_Bus/SerialCode/Result_Unconstrained/: Unconstrained.ods  Unconstrained_LMPresult.txt  Unconstrained_dualresult.txt  Unconstrained_objective.txt  Unconstrained_powerResult.txt  Unconstrained_primresult.txt
(+193 files in other folders)
